commit after adding JWT token
